economic instability system setup

--- a/localisation/english/MD_focus_EU_USoE_l_english.yml
+++ b/localisation/english/MD_focus_EU_USoE_l_english.yml
@@ -48,6 +48,7 @@
  UOE_TRANSITIONAL_COUNCIL_DESC: "A transitional government, created upon the creation of the United States of Europe. This caretaker government exists only to help the people establish their new nation, and will be replaced as soon as the new government is fully established."
 
  ### Variables / Flags ###
+ is_low_prod_tt: "A low productivity state has space to build more network infrastructure."
  new_government_established: "Government has been established."
  recovered_economy_tt: "The Economy has been stabilized"
  no_culture_war_tt: "The Culture War is over"
@@ -57,37 +58,59 @@
  military_not_revolting_tt: "Military Revolt is less than §Y100%§!"
  high_prod_disp_tt: "We currently have §G[?high_prod_state_count]§! high productivity states"
  low_prod_disp_tt: "We currently have §R[?low_prod_state_count]§! low productivity states"
+ edu_move_high_tt: "§RDecrease§! §Ystate productivity§! by §R5%§! per state"
+ edu_move_low_tt: "§GIncrease§! §Ystate productivity§! by §G[?prod_add_var]§! per state"
  good_high_prod_unrest: "High Productivity State Unrest is less than §R50%§!"
  good_low_prod_unrest: "Low Productivity State Unrest is less than §R50%§!"
  reduce_low_unrest_by_5: "Reduces Low Productivity State Unrest by §G5%§!"
  reduce_low_unrest_by_3: "Reduces Low Productivity State Unrest by §G3%§!"
+ reduce_low_unrest_by_10: "Reduces Low Productivity State Unrest by §G10%§!"
+ reduce_low_unrest_by_15: "Reduces Low Productivity State Unrest by §G15%§!"
  increase_high_unrest_by_1: "Increases High Productivity State Unrest by §R1.5%§!"
  increase_high_unrest_by_2: "Increases High Productivity State Unrest by §R2.5%§!"
+ increase_high_unrest_by_25: "Increases High Productivity State Unrest by §R25%§!"
+ reduce_high_unrest_by_5: "Reduces High Productivity State Unrest by §G5%§!"
 
  ### Decisions / Cateogries ###
  UOE_forming_a_government_category: "Forming a New Government"
- UOE_forming_a_government_category_desc: "Our people have decided, and now that we have merged, we must establish a real government to rule. This will take some time, but we must first establish ourselves culturally, economically, and politically, in order to ensure the safety and stability of our people. We must not take to long, however, or push the people too far, lest there be unforseen consequences....\n\n§RFailing the Form a Government mission will result in the military seizing power over the USoE.\n\nAdditionally, pushing the people or military too far will also result in a military coup of the USoE§!\n\n§YMilitary Revolt:§! §R[?military_revolt|%]§!\n\nMilitary Revolt is the percentage of likelihood that the military is going to seize power from the transitional government, and establish a military government for the people. At 70% or greater, events will start to occur, and at 100%, the coup attempt will occur.\n\nStability, Government Popularity, Protest Strength, Protest Radicalization, and Economic Status will all affect how the military revolt value changes.\n\n§RIF STABILITY REACHES 0, THE MILITARY WILL SEIZE POWER IN AN EMERGENCY MEASURE§!"
+ UOE_forming_a_government_category_desc: "Our people have decided, and now that we have merged, we must establish a real government to rule. This will take some time, but we must first establish ourselves culturally, economically, and politically, in order to ensure the safety and stability of our people. We must not take to long, however, or push the people too far, lest there be unforseen consequences....\n\n§RFailing the Form a Government mission will result in the military seizing power over the§! §Y[ROOT.GetNameWithFlag]§!.\n\n§RAdditionally, pushing the people or military too far will also result in a military coup of the§! §Y[ROOT.GetNameWithFlag]§!\n\n§YMilitary Leadership Revolt:§! §R[?military_revolt|%]§!\n\n§YMilitary Leadership Revolt§! is the percentage of likelihood that the military is going to seize power from the transitional government, and establish a military government for the people. At §O75%§! or greater, events about this situation will start to occur, and at §!100%§!, the coup attempt will begin.\n\n§YStability§!, §CGovernment Popularity§!, §LProtest Strength§!, §gProtest Radicalization§!, §OCultural Balance§! and §PEconomic Status§! will all affect how the military revolt value changes, both positively and negatively.\n\nCompleting focuses related to the military will §Greduce§! §YMilitary Leadership Revolt§!, as it will show favor to them directly. Additionally, doing things to upset the military will significantly §Rincrease§! §YMilitary Leadership Revolt§!\n\n§RIF§! §Y[ROOT.GetNameWithFlag]'s§! §RSTABILITY REACHES 0, THE MILITARY WILL TRY TO SEIZE POWER AS AN EMERGENCY MEASURE§!"
  UOE_economic_instability_category: "Economic Instability"
- UOE_economic_instability_category_desc: "Our nation is in a time of economic crisis. Demands for everything have skyrocketed, and with the merger of all our economies into one unified one, buisnesses are in turmoil, and low productivity regions are suffering the worst of the effects. We must work quickly to close the gap between our high and low productivity regions, or else those who got the worst of the deal may choose to leave.\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\nIf we do not develop the poorer regions appropriately, we will anger them, and potentially cause them to exit the United States of Europe. However, spending too much on developing those regions may anger those from areas that are more productive, and cause them to try and leave as well.\n\n§YUnrest in Low Productivity States:§! §R[?low_prod_unrest|%]§!\n\n§YUnrest in High Productivity States:§! §R[?high_prod_unrest|%]§!\n\nEvery month that there are more low productivity states than high ones, low productivity unrest will increase. High productivity state unrest will increase if GDP/C is not increased by §Y2%§! each month. Decisions in the §YEconomic Instability§! decision tab will increase or decrease unrest as well.\n\nLast Month's GPD/C increase: §Y[?gdp_capita_increase|%]§!"
- form_a_government: "Form a Government"
- form_a_government_desc: "Form a new government for the United States of Europe"
+ UOE_economic_instability_category_desc: "Our nation is in a time of economic crisis. Demands for everything have skyrocketed, and with the merger of all our economies into one unified one, buisnesses are in turmoil, and low productivity regions are suffering the worst of the effects. We must work quickly to close the gap between our high and low productivity regions, or else those who got the worst of the deal may choose to leave.\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\nIf we do not develop the poorer regions appropriately, we will anger them, and potentially cause them to exit the United States of Europe. However, spending too much on developing those regions may anger those from areas that are more productive, and cause them to try and leave as well.\n\n§YUnrest in Low Productivity States:§! §R[?low_prod_unrest|%]§!\n\n§YUnrest in High Productivity States:§! §R[?high_prod_unrest|%]§!\n\nEvery month that there are more low productivity states than high ones, low productivity unrest will increase. High productivity state unrest will increase if GDP/C is not increased by §Y2%§! each month, and will decrease is GDP/C is increased past §Y2%§!. Decisions in the §YEconomic Instability§! decision tab will increase or decrease unrest as well.\n\nLast Month's GPD/C increase: §Y[?gdp_capita_increase|%]§!"
+ form_a_government: "A Stable Government"
+ form_a_government_desc: "The military is placated. The government has shown it is for the people, and is stable enough to provide for all the people of the [ROOT.GetNameWithFlag]"
  military_coup_start: "Military Coup"
  military_coup_start_desc: "If the military is not kept happy, there may be a coup..."
  countdown_to_revolution: "The Coup Countdown"
  countdown_to_revolution_desc: "We have a limited time to correct our issues, or else the military will seize power..."
- assist_low_state_growth: "Fund Low Productivity State Growth"
- develop_low_prod_network_infra: "Develop Low Productivity State Network Infrastructure"
+ assist_low_state_growth: "Fund State Workforce Education"
+ assist_low_state_growth_desc: "By funding education programs in our lower productivity states, specifically targeting workforce members, we can §Gincrease§! productivity in those states."
+ develop_low_prod_network_infra: "Develop State Network Infrastructure"
+ develop_low_prod_network_infra_desc: "Investing in network infrastrcuture deveopment will allow is to quickly §Gincrease§! productivity in those states we support."
  end_economic_crisis: "End Economic Instability"
- low_prod_states_revolting_now: "Low Productivity State Unrest > 99%"
- high_prod_states_revolting_now: "High Productivity State Unrest > 99%"
+ end_economic_crisis_desc: "We have achieved the best balance we can, and have managed to finally end the economic crisis that we inadvertently started when the [ROOT.GetNameWithFlag] formed."
+ low_prod_states_revolting_now: "Low Productivity State Unrest > §R99%§!"
+ low_prod_state_revolt_stopped: "Low Productivity State Unrest < §R95%§!"
+ high_prod_states_revolting_now: "High Productivity State Unrest > §R99%§!"
+ high_prod_state_revolt_stopped: "High Productivity State Unrest < §R95%§!"
+ country_productivity_program: "Encourage Increased Productivity"
+ country_productivity_program_desc: "Our country must strive to encourage every person to do as much as they can, as often as they can, for our nation. Media campaigns are the best way to encourage this."
+ low_prod_public_campaigns: "Government Support Campaign"
+ low_prod_public_campaigns_desc: "Via public messaging and government funding, we can reassure those people living and less developed areas that they have not been forgotten."
+ encourage_educated_movement: "Encourage College Graduate Movement"
+ encourage_educated_movement_desc: "To further grow the local economies and productivity of poorer states, the government will provide incentive fundings to get educated members of our nation to move there."
+ invest_in_developed_areas: "Invest in Developed States"
+ invest_in_developed_areas_desc: "We need to ensure that our economy keeps growing. The fastest way to do that is to build in areas already developed enough to support rapid growth."
  low_prod_state_revolt: "Low Productivity State Revolt"
+ low_prod_state_revolt_desc: "If our states with §Ylow§! productivity are not kept happy, they may choose to §Rleave§! the [ROOT.GetNameWithFlag]..."
  high_prod_state_revolt: "High Productivity State Revolt"
+ high_prod_state_revolt_desc: "If our states with §Yhigh§! productivity are not kept happy, they may choose to §Rleave§! the [ROOT.GetNameWithFlag]..."
 
  ### Focuses ###
  UOE_Constitute_the_United_States_of_Europe: "Constitute the United States of Europe"
  UOE_Constitute_the_United_States_of_Europe_desc: "The people, and parliament, have spoken. In a great, historical moment, the nations of the European Union are no longer just a union, but one nation, and one family. A great task lies before us, greater than anything our fathers faced, but together, we march towards our bold new future."
  UOE_Begin_Total_Unification: "Begin Total Unification"
- UOE_Begin_Total_Unification_desc: "The beginning steps require us to integrate all parts of our society, and quickly. Failure to do so could spell disaster for the United States of Europe, and could bring this all crashing down around us. Economic, Social, Military, and Political issues must be resolved quickly.\n\n§RStarts the decision and event chains that can lead to the collapse of the USoE if improperly managed!§!"
+ UOE_Begin_Total_Unification_desc: "The beginning steps require us to integrate all parts of our society, and quickly. Failure to do so could spell disaster for the United States of Europe, and could bring this all crashing down around us. Economic, Social, Military, and Political issues must be resolved quickly.\n\n§RStarts the decision and event chains that can lead to the collapse of the [ROOT.GetNameWithFlag] if improperly managed!§!"
+ starting_events_tooltip: "Starts all missions for §YMilitary Unrest§! and §YEconomic Instability§! decision categories, and unlocks those categories."
 
  ### Events ###
  UOEEvent.1.t: "The Military Coup"
