--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -2450,7 +2450,7 @@
  rolling_thunder: "Rolling Thunder"
  rolling_thunder_desc: "Preparing our missile ships for effective volleys can ensure the maximum amount of damage is laid out against those who would threaten us."
  death_from_below: "Death from Below"
- death_from_below_desc: "Our submarine fleet is integral to our operations in the open oceans. Ensuring they can successfully sink down the enemy ship."
+ death_from_below_desc: "Our submarine fleet is integral to our operations in the open oceans. Make sure they can successfully sink any enemy ships that appear in the battle zone."
  air_dominance: "Air Dominance"
  air_dominance_desc: "By concentrating our efforts into air superiority over the seas, we can effectively ground all enemy aircraft and hamper their ability to fight us in the sky."
  missile_support: "Missile Support"
