--- a/localisation/english/MD_focus_MOR_l_english.yml
+++ b/localisation/english/MD_focus_MOR_l_english.yml
@@ -1,5 +1,63 @@
 ﻿# Author(s): AngriestBird
 l_english:
+ # Focus Tree
+ morocco_focus: "Moroccan Focus Tree"
+ # Monarchy Reform Section of the Tree
+ MOR_dieu_la_patrie_le_roi: "Dieu, La Patrie, Le Roi"
+ MOR_dieu_la_patrie_le_roi_desc: "Long have we been ruled by the monarchs of the House of Alawite. The words Kingdom and Morocco have become almost synonymous since the age of old. Truly, we are a nation of God, Fatherland, and the King."
+ MOR_parliamentary_involvement: "Parliamentary Involvement"
+ MOR_parliamentary_involvement_desc: "The parliament under our former King, Hassan II, was largely held at the length of its leash. Maybe we should reconsider our position on King Mohamed's involvement and whether the King approves of such a decision."
+ MOR_the_role_of_the_king: "The Role of the King"
+ MOR_the_role_of_the_king_desc: "The Kingdom has long been the leading body in our country and, for time immemorial, our society. The leaf of the millennia has turned as the world ages yet another day, month, and year. It is time we ask the ultimate question. We must question the role of the King and what his role will be in the future with Morocco and, subsequently, with his heir."
+ MOR_royal_family_decrees: "Royal Family Decrees"
+ MOR_royal_family_decrees_desc: ""
+ MOR_status_of_the_amazigh_languages: "Status of the Amazigh Languages"
+ MOR_status_of_the_amazigh_languages_desc: ""
+ MOR_the_power_of_amnesty: "The Power of Amnesty"
+ MOR_the_power_of_amnesty_desc: ""
+ MOR_the_reform_of_mudawana: "The Reform of Mudawana"
+ MOR_the_reform_of_mudawana_desc: ""
+ MOR_yennayer: "Yennayer"
+ MOR_yennayer_desc: ""
+ MOR_enshrine_hassanya_languages: "Enshrine the Hassaniya Language"
+ MOR_enshrine_hassanya_languages_desc: ""
+ MOR_form_the_ier: "Form the IER"
+ MOR_form_the_ier_desc: ""
+ MOR_head_of_council_of_government: "Head of the Council of Government"
+ MOR_head_of_council_of_government_desc: ""
+ MOR_right_to_dissolve: "Right to Dissolve"
+ MOR_right_to_dissolve_desc: ""
+ MOR_the_burqa_role_in_society: "The Burqa's Role in Society"
+ MOR_the_burqa_role_in_society_desc: ""
+ MOR_the_sanctity_of_the_king: "The Sanctity of the King"
+ MOR_the_sanctity_of_the_king_desc: ""
+ MOR_freedom_of_the_press: "Freedom of the Press"
+ MOR_freedom_of_the_press_desc: ""
+ MOR_judiciary_independence: "Judiciary Independence"
+ MOR_judiciary_independence_desc: ""
+ MOR_selection_of_the_prime_minister: "Selection of the Prime Minister"
+ MOR_selection_of_the_prime_minister_desc: ""
+ MOR_right_of_appointment: "Right of Appointment"
+ MOR_right_of_appointment_desc: ""
+ MOR_guaranteeing_of_civil_rights_of_women: "Guaranteeing of Civil Rights of Women"
+ MOR_guaranteeing_of_civil_rights_of_women_desc: ""
+ MOR_the_right_of_dismissal: "The Right of Dismissal"
+ MOR_the_right_of_dismissal_desc: ""
+ MOR_the_role_of_the_military: "The Role of the Military"
+ MOR_the_role_of_the_military_desc: ""
+ MOR_critiques_of_the_king: "Critiques of the King"
+ MOR_critiques_of_the_king_desc: ""
+ MOR_constitution_reformed: "Constitution Reformed"
+ MOR_constitution_reformed_desc: ""
+
+ # Moroccan Decisions
+ # The Role of the King --- Decisions
+ MOR_the_moroccan_role_of_the_king_balance_of_power_category: "The Role of the King"
+ MOR_the_moroccan_role_of_the_king_balance_of_power_category_desc: ""
+ MOR_monarchist_mid_range: "A Balanced Approach"
+ MOR_reformist_monarch_left_side: "Pro-Democratic King"
+ MOR_absolutist_monarch_right_side: "The Absolutist King"
+
  # Moroccan Events
  morocco.400.t: "The Casablanca Bombings"
  morocco.400.d: "Early today several bombings have taken place across several sites in the city of Casablanca. Twelve suicide bombers with bombs placed in their backpacks set off explosions in the Casa de España, Hotel Farah, the Jewish Alliance of Casablanca, and several other sites near the Belgian consulate and the old Jewish cemetery. The attacks claimed the lives of forty-five people including the twelve suicide bombers and injured at least a hundred more civilians. It is speculated the recent rise of Salafist preachers in the country, many of whom are veterans of the Soviet-Afghan War, have begun to radicalize more and more as time progresses. The GCIM and al-Qaeda have declared their responsibility for the attacks with the attack being targeted towards Jews in the city despite none of the victims being Jewish. Some local groups are stating that this is due to the rise of what is known as \"Shanty Towns\" in the city paving the way for radicalization amongst the impoverished people of the city and Morocco."
