adding stuff for when groups of usoe people try to leave

--- a/localisation/english/MD_focus_EU_USoE_l_english.yml
+++ b/localisation/english/MD_focus_EU_USoE_l_english.yml
@@ -101,9 +101,11 @@
  invest_in_developed_areas: "Invest in Developed States"
  invest_in_developed_areas_desc: "We need to ensure that our economy keeps growing. The fastest way to do that is to build in areas already developed enough to support rapid growth."
  low_prod_state_revolt: "Low Productivity State Revolt"
- low_prod_state_revolt_desc: "If our states with §Ylow§! productivity are not kept happy, they may choose to §Rleave§! the [ROOT.GetNameWithFlag]..."
+ low_prod_state_revolt_desc: "If our states with §Ylow§! productivity are not kept happy, they may choose to §Rleave§! the §Y[ROOT.GetNameWithFlag]§!..."
  high_prod_state_revolt: "High Productivity State Revolt"
- high_prod_state_revolt_desc: "If our states with §Yhigh§! productivity are not kept happy, they may choose to §Rleave§! the [ROOT.GetNameWithFlag]..."
+ high_prod_state_revolt_desc: "If our states with §Yhigh§! productivity are not kept happy, they may choose to §Rleave§! the §Y[ROOT.GetNameWithFlag]§!..."
+ low_prod_states_leaving: "Low Productivity States Seceding from §Y[ROOT.GetNameWithFlag]§!"
+ high_prod_states_leaving: "High Productivity States Seceding from §Y[ROOT.GetNameWithFlag]§!"
 
  ### Focuses ###
  UOE_Constitute_the_United_States_of_Europe: "Constitute the United States of Europe"
