--- a/localisation/english/factions_l_english.yml
+++ b/localisation/english/factions_l_english.yml
@@ -204,7 +204,7 @@
 
  #Brazil
  UNASUL_faction: "UNASUL"
- 
+
  #India
  Aryavarta_pact: "Pact of Holy Sun"
  VIE_RAJPACT: "Revolutionary Pact"
@@ -212,6 +212,7 @@
  #Sweden
  Northern_Alliance: "Northern Alliance"
 
+ alliance_european_states: "Alliance of Free European States"
  # MP custom factions
  TEAM_A: "Team A"
  TEAM_B: "Team B"
@@ -257,6 +258,6 @@
  faction_fifth_international_member_TT: "§RFaction Special Rules§!:\n- Only countries that are ruled by Emerging or Non-Aligned Communists are allowed in the faction"
  faction_fifth_international_member_join_faction_rule_tt: "§RWe need to be ruled by [Communist-State_L] or [Neutral_Communism_L] to join the 5th International!§!"
  faction_fifth_international_member_offer_join_faction_rule_tt: "§RThey need to be ruled by [Communist-State_L] or [Neutral_Communism_L] to join the 5th International!§!"
- 
+
  #UAR faction
  UAR_arab_liberation_front: "Arab Liberation Front"
