--- a/localisation/simp_chinese/equipment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/equipment_l_simp_chinese.yml
@@ -1848,17 +1848,19 @@
  GER_artillery_4: "M777A2 155mm榴弹炮"
  GER_artillery_4_desc: "M777A2是M777的进一步升级改型。新的升级包括Block 1A软件升级，增加了增强型便携式感应火炮引信设置器，可使用 XM892 ”神剑“制导弹药。"
  GER_artillery_4_short: "M777A2"
- GER_util_vehicle_0: "大众臭鼬"
- GER_util_vehicle_1: "梅赛德斯奔驰 250 GD \"狼\""
- GER_util_vehicle_1_desc: "梅赛德斯奔驰 250 GD \"狼\"是G级车型的250 GD的军用型号，为德国联邦国防军设计。"
- GER_util_vehicle_1_short: "G级250 GD"
- GER_util_vehicle_2: "梅赛德斯-奔驰G级G270狼SSA"
- GER_util_vehicle_2_desc: "梅赛德斯-奔驰 狼 SSA是G级车型的G-270 CDI的军用型号，比之前的250 GD型号有所改进。"
- GER_util_vehicle_2_short: "狼SSA"
- GER_util_vehicle_3: "野犬"
- GER_util_vehicle_3_desc: "ATF野犬是一款德国重装甲防地雷反伏击车，基于乌尼莫克 V 型车体设计底盘，由克劳斯-玛菲·威格曼公司生产。\nATF是Allschutz-Transport-Fahrzeug的缩写，德文意思是全防护运输车辆。它以澳大利亚本土狗“野犬”的名字命名。野犬的标准武器是一挺莱茵金属MG3 7.62毫米机枪，位于车辆顶部的遥控炮塔中."
- GER_util_vehicle_4: "野犬-II"
- GER_util_vehicle_4_desc: "ATF野犬2是野犬的高级版本，基于升级后的乌尼莫克 U 5000 底盘，具有改进的保护和更多的有效载荷。它提供两个版本：3,250 毫米轴距版本（3.5 吨有效载荷）和 3,850 毫米轴距版本（4 吨有效载荷）。 野犬2可容纳8名乘员。"
+ GER_util_vehicle_0: "Magirus-Deutz Jupiter"
+ GER_util_vehicle_0_desc: ""
+ GER_util_vehicle_0_short: "Jupiter"
+ GER_util_vehicle_1: "DKW Munga"
+ GER_util_vehicle_1_short: "Munga"
+ GER_util_vehicle_2: "Volkswagen Iltis"
+ GER_util_vehicle_2_desc: ""
+ GER_util_vehicle_2_short: "Iltis"
+ GER_util_vehicle_3: "Mercedes-Benz G-Class G270 Wolf SSA"
+ GER_util_vehicle_3_desc: ""
+ GER_util_vehicle_3_short: "Wolf SSA"
+ GER_util_vehicle_4: "Dingo"
+ GER_util_vehicle_4_desc: ""
  GER_util_vehicle_5: "LAPV貉"
  GER_util_vehicle_5_desc: "LAPV貉是德国联邦国防军的轻型装甲巡逻车。"
  GER_util_vehicle_6: "莫瓦格鹰 V"
