Some small fixes and loc improvements

--- a/localisation/english/MD_internal_factions_l_english.yml
+++ b/localisation/english/MD_internal_factions_l_english.yml
@@ -593,8 +593,8 @@
  internal_factions_events.15.d: "$labour_unions$ is demanding we expand our healthcare budget. How should we proceed?"
  internal_factions_events.15.a: "Accept the Demands."
  internal_factions_events.15.b: "Deny the Demands."
- internal_factions_events.16.t: "$labour_unions$ Demand Increased Welfare Spending"
- internal_factions_events.16.d: "$labour_unions$ is demanding we expand our social spending budget. How should we proceed?"
+ internal_factions_events.16.t: "$labour_unions$ Demands Increased Welfare Spending"
+ internal_factions_events.16.d: "Labour Unions in the country are demanding we expand our social spending budget to better support the workers and those who are unable to work. How should we proceed?"
  internal_factions_events.16.a: "Accept the Demands."
  internal_factions_events.16.b: "Deny the Demands."
  internal_factions_events.17.t: "Farmers Resist Agrarian Reform"
