AI Research Improvements

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,8 @@ v1.10.2
   - Fixed the European Union AI from not providing IPA to EU Candidates (no not the beer)
   - Turkey should be less likely to bail out Greece while it is in debt throes
   - Improved the AI with Enrichment Facility rejection so they consider more factors
+  - Improved the AI for the research slots so they don't have open slots available
+  - The AI should now research SAM missiles to help them out a bit
 
  Balance:
   - Reduced the amount of fuel consumed by non-electric (population) sources
