focus tree work and events work

--- a/localisation/english/MD_focus_EU_USoE_l_english.yml
+++ b/localisation/english/MD_focus_EU_USoE_l_english.yml
@@ -1,5 +1,30 @@
 ﻿l_english:
 
+ #Effect Tooltips
+ UOE_change_project_cost_tooltip: "Changes §Y$UOE_economic_turmoil_modifier$§!: $projects_cost_modifier$ by [?temp_change|%-]"
+ UOE_change_tax_gain_tooltip: "Changes §Y$UOE_economic_turmoil_modifier$§!: $tax_gain_multiplier_modifier$ by [?temp_change|%+]"
+ UOE_change_consumer_goods_tooltip: "Changes §Y$UOE_economic_turmoil_modifier$§!: Tax Cost Factor by [?temp_change|%-]"
+ UOE_change_productivity_grow_tooltip: "Changes §Y$UOE_economic_turmoil_modifier$§!: $productivity_growth_modifier$ by [?temp_change|%+]"
+ UOE_change_const_speed_tooltip: "Changes §Y$UOE_economic_turmoil_modifier$§!: Construction Speed by [?temp_change|%+]"
+ UOE_change_trade_opinion_tooltip: "Changes §Y$UOE_economic_turmoil_modifier$§!: Trade deal opinion factor by [?temp_change|%+]"
+ UOE_change_stab_fac_tooltip: "Changes §Y$UOE_founding_a_new_nation_modifier$§!: $stability_factor$ by [?temp_change|%+]"
+ UOE_change_foreign_inf_def_tooltip: "Changes §Y$UOE_founding_a_new_nation_modifier$§!: $foreign_influence_defense_modifier$ by [?temp_change|%+]"
+ UOE_change_pol_power_tooltip: "Changes §Y$UOE_founding_a_new_nation_modifier$§!: $political_power_factor$ by [?temp_change|%+]"
+ UOE_change_energy_use_tooltip: "Changes §Y$UOE_the_resource_crisis_modifier$§!: $energy_use_multiplier$ by [?temp_change|%-]"
+ UOE_change_prod_lack_tooltip: "Changes §Y$UOE_the_resource_crisis_modifier$§!: $production_lack_of_resource_penalty_factor$ by [?temp_change|%+]"
+ UOE_change_local_resource_tooltip: "Changes §Y$UOE_the_resource_crisis_modifier$§!: $local_resources_factor$ by [?temp_change|%+]"
+ UOE_change_army_tooltip: "Changes §Y$UOE_restructuring_military_modifier$§!: §YArmy Attack Factor, Army Defense Factor, Army Breakthrough Factor, Army Defense Factor§! by [?temp_change|%+]"
+ UOE_change_air_tooltip: "Changes §Y$UOE_restructuring_military_modifier$§!: §YAir Attack Factor, Air Defense Factor, and Radar Advantage Factor§! by [?temp_change|%+]"
+ UOE_change_navy_tooltip: "Changes §Y$UOE_restructuring_military_modifier$§!: §YNaval attack and defense factors for all ships§! by [?temp_change|%+]"
+ UOE_change_equip_cost_tooltip: "Changes §Y$UOE_restructuring_military_modifier$§!: $equipment_cost_multiplier_modifier$ by [?temp_change|%+]"
+ UOE_change_eco_mig_tooltip: "Changes §Y$UOE_economic_turmoil_modifier$§!: $migration_rate_value_factor$ by [?temp_change|%+]"
+ UOE_change_pol_mig_tooltip: "Changes §Y$UOE_founding_a_new_nation_modifier$§!: $migration_rate_value_factor$ by [?temp_change|%+]"
+ UOE_mil_revolt_change_tooltip: "Changes $military_revolt$ by [?mil_change|%-]"
+ low_prod_unrest_change_tooltip: "Changes $low_prod_unrest$ by [?unrest_change|%-]"
+ high_prod_unrest_change_tooltip: "Changes $high_prod_unrest$ by [?unrest_change|%-]"
+ increase_party_popularity_tooltip: "Increases popularity of all parties in the ruling coalition by [?party_increase|%+]\n"
+ UOE_remove_all_int_fac_tooltip: "§RRemoves ALL§! §YInternal Factions§! §Rfrom the§! §Y[ROOT.GetNameWithFlag]§!\n\nThree events will then fire that select the new §YInternal Factions§! for the §Y[ROOT.GetNameWithFlag]§!"
+
  #############
  ### Ideas / BoP / Decisions ###
  #############
@@ -46,6 +71,8 @@
  UOE_founding_a_new_nation_modifier_desc: "The political ramifications of founding a nation like this are immense and complex, not to mention the societal ones. Europe is writhing with energy, excitement, and fear, as politicians and citizens alike struggle to see how this new nation will work. We must act quickly to establish the final version of our new government, and to lead the people in the direction we wish to go."
  UOE_TRANSITIONAL_COUNCIL: "USoE Transitional Government"
  UOE_TRANSITIONAL_COUNCIL_DESC: "A transitional government, created upon the creation of the United States of Europe. This caretaker government exists only to help the people establish their new nation, and will be replaced as soon as the new government is fully established."
+ UOE_new_government_progress: "Progress Towards the Future"
+ UOE_new_government_progress_desc: "Our government is making progress towards establishing our new nation, and with that progress comes happier people, and a more stable nation, but this progress must be continued in order to keep the people happy."
 
  ### Variables / Flags ###
  is_low_prod_tt: "A low productivity state has space to build more network infrastructure."
@@ -62,14 +89,9 @@
  edu_move_low_tt: "§GIncrease§! §Ystate productivity§! by §G[?prod_add_var]§! per state"
  good_high_prod_unrest: "High Productivity State Unrest is less than §R50%§!"
  good_low_prod_unrest: "Low Productivity State Unrest is less than §R50%§!"
- reduce_low_unrest_by_5: "Reduces Low Productivity State Unrest by §G5%§!"
- reduce_low_unrest_by_3: "Reduces Low Productivity State Unrest by §G3%§!"
- reduce_low_unrest_by_10: "Reduces Low Productivity State Unrest by §G10%§!"
- reduce_low_unrest_by_15: "Reduces Low Productivity State Unrest by §G15%§!"
- increase_high_unrest_by_1: "Increases High Productivity State Unrest by §R1.5%§!"
- increase_high_unrest_by_2: "Increases High Productivity State Unrest by §R2.5%§!"
- increase_high_unrest_by_25: "Increases High Productivity State Unrest by §R25%§!"
- reduce_high_unrest_by_5: "Reduces High Productivity State Unrest by §G5%§!"
+ military_revolt: "§RMilitary Leadership Revolt§!"
+ low_prod_unrest: "§YLow Productivity State Unrest§!"
+ high_prod_unrest: "§YHigh Productivity State Unrest§!"
 
  ### Decisions / Cateogries ###
  UOE_forming_a_government_category: "Forming a New Government"
@@ -121,6 +143,49 @@
  UOEEvent.1.a_desc: "We will transfer power to the Joint Chiefs of Staff without a fight."
  UOEEvent.1.b: "It's treason, then!"
  UOEEvent.1.b_desc: "Traitors can never be trusted or reasoned with. Our military will save us!\n\n§RThis path will start a civil war!§!"
+ UOEEvent.2.t: "The Failure to Grow"
+ UOEEvent.2.d: "The people have had enough. Those that were promised a chance to catch up with the richer areas of Europe, feeling ignored and cast aside, have demanded their freedom. Though major local movements, the people now demand their freedom, and the right to establish their own governments again."
+ UOEEvent.2.a: "We must let the people choose."
+ UOEEvent.2.b: "Never!"
+ UOEEvent.3.t: "The Collapse of the Economy"
+ UOEEvent.3.d: "Our richer areas are angry. After not being given enough support to continue their own growth, they have decided that enough is enough. Using their money and influence, the major players have manipulated the politics of the United States of Europe to try and further their own goals...."
+ UOEEvent.3.a: "Let them leave, if they wish."
+ UOEEvent.3.b: "This Union Will Stand!"
+ UOEEvent.3.c: "Well...they do have the money."
+ UOEEvent.4.t: "Economic Internal Faction"
+ UOEEvent.4.d: "Our economic powers are all struggling for control, and one of them will come out on top. We can either let fate take it's course, or select a specific power, for a cost...\n\n§OManually selecting a specific internal faction will§! §Rupset§! the people and §Rincrease§! $military_revolt$.\n\n§ORandomly selecting the faction will weight the random change based on the opinion of the internal faction, and will not upset the people.§!"
+ UOEEvent.4.a: "$small_medium_business_owners$"
+ UOEEvent.4.b: "$international_bankers$"
+ UOEEvent.4.c: "$fossil_fuel_industry$"
+ UOEEvent.4.dd: "View Other Options"
+ UOEEvent.41.t: "Economic Internal Faction"
+ UOEEvent.41.d: "Our economic powers are all struggling for control, and one of them will come out on top. We can either let fate take it's course, or select a specific power, for a cost...\n\n§OManually selecting a specific internal faction will§! §Rupset§! the people and §Rincrease§! $military_revolt$.\n\n§ORandomly selecting the faction will weight the random change based on the opinion of the internal faction, and will not upset the people.§!"
+ UOEEvent.41.a: "$industrial_conglomerates$"
+ UOEEvent.41.b: "$oligarchs$"
+ UOEEvent.41.c: "Random Faction"
+ UOEEvent.41.dd: "View Other Options"
+ UOEEvent.5.t: "Military Internal Faction"
+ UOEEvent.5.d: "Our military powers are all vying for control, and one will soon come out on top. We can either select one, or we can let fate determine who will be in control...\n\n§OFavoring any faction over§! §YThe Military§! §Owill signficantly§! §Rincrease§! $military_revolt$!"
+ UOEEvent.5.a: "$maritime_industry$"
+ UOEEvent.5.b: "$defense_industry$"
+ UOEEvent.5.c: "$the_military$"
+ UOEEvent.5.dd: "View Other Options"
+ UOEEvent.51.t: "Military Internal Faction"
+ UOEEvent.51.d: "Our military powers are all vying for control, and one will soon come out on top. We can either select one, or we can let fate determine who will be in control...\n\n§OFavoring any faction over§! §YThe Military§! §Owill signficantly§! §Rincrease§! $military_revolt$!"
+ UOEEvent.51.a: "$intelligence_community$"
+ UOEEvent.51.b: "Random Faction"
+ UOEEvent.51.c: "View Other Options"
+ UOEEvent.6.t: "Interest Group Internal Faction"
+ UOEEvent.6.d: "Several interest groups are active inside our nation. One of them must take the seat of power for their block.\n\n§OManually selecting a specific internal faction will§! §Rupset§! the people and §Rincrease§! $military_revolt$.\n\n§ORandomly selecting the faction will weight the random change based on the opinion of the internal faction, and will not upset the people.§!"
+ UOEEvent.6.a: "$labour_unions$"
+ UOEEvent.6.b: "$landowners$"
+ UOEEvent.6.c: "$farmers$"
+ UOEEvent.6.dd: "View Other Options"
+ UOEEvent.61.t: "Interest Group Internal Faction"
+ UOEEvent.61.d: "Several interest groups are active inside our nation. One of them must take the seat of power for their block.\n\n§OManually selecting a specific internal faction will§! §Rupset§! the people and §Rincrease§! $military_revolt$.\n\n§ORandomly selecting the faction will weight the random change based on the opinion of the internal faction, and will not upset the people.§!"
+ UOEEvent.61.a: "$communist_cadres$"
+ UOEEvent.61.b: "Random Faction"
+ UOEEvent.61.c: "View Other Options"
 
  ### 5% ###
  tooltip_USoE_Western_Autocracy_rise_5: "§Y[THIS.Western_Autocracy_L]§! gain §G5%§! support."
