--- a/Changelog.txt
+++ b/Changelog.txt
@@ -77,6 +77,7 @@ v1.10.2
   - Fixed the agricultural events where you could embargo yourself
   - Fixed a number of provincial errors in various focus trees
   - Fixed a division template being created after a unit creation in the Central Asian tree
+  - Fixed Egyptian Helicopter Operator purchase from France causing crashes
 
  Content:
   - New building "Commercialized Agriculture District"
